August_30/August_30/src/objects/Phase_Role__c.object
<CustomObject>
    <fields>
        <fullName>Allocation__c</fullName>
        <inlineHelpText>Percent Allocation</inlineHelpText>
        <label>Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Resource</label>
        <referenceTo>Assigned_Resource__c</referenceTo>
        <relationshipLabel>Phase Roles</relationshipLabel>
        <relationshipName>Phase_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_Weeks__c</fullName>
        <label>Duration (Weeks)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>(Start_Date__c )  +  (Duration_Weeks__c)  * 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Title__c</fullName>
        <formula>Project_Phase__r.Phase_Title__c</formula>
        <label>Phase Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Role__r.Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <referenceTo>Project_Phase__c</referenceTo>
        <relationshipLabel>Phase Roles</relationshipLabel>
        <relationshipName>Phase_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <formula>Assigned_Resource__r.Contact_Name__c</formula>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <formula>Role__r.Role_Description__c</formula>
        <label>Role Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Status__c</fullName>
        <label>Role Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sourced</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sourcing in Progress</fullName>
                </value>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Phase Roles</relationshipLabel>
        <relationshipName>Phase_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <description>This is a junction object between 'Role' and 'Project Phase'</description>
    <label>Phase Role</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Phase Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phase Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Phase_Title__c</columns>
        <columns>Role_Description__c</columns>
        <columns>Duration_Weeks__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>